src/test/ui/error-codes/E0282.stderr
error[E0282]: type annotations needed
  --> $DIR/E0282.rs:2:9
   |
LL |     let x = "hello".chars().rev().collect();
   |         ^
   |         |
   |         cannot infer type
   |         consider giving `x` a type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
